--- a/todo.txt
+++ b/todo.txt
@@ -63,15 +63,12 @@ Engineering Tasks:
 
 To Do on current task:
 * Refactor business logic code, including removing unnecessary(?) business logic methods
-	- numberOfActiveConnections
-	- isSocketConnected
-  - onNextClientEvent
-  - onNextServerEmit
 - Look for opportunities to improve Socket.IO abstraction API
 	- Unify event sending parameters as suggested by Martin Grandrath's in E582 comments - http://www.letscodejavascript.com/v3/comments/live/582#comment-3675682857
 	- Rename 'Event' to 'Message' across the board
 - Possible race condition? _real_time_server_test "sends message to all Socket.IO clients" failed intermittently
 - Clean up Server and its tests
+	- Remove RealTimeLogic.numberOfActiveConnections
 - Smoke test failure - introduced in E579? Is there a real bug that should have been caught by other tests?
 	- appears to be a race condition; it doesn't occur every time
 - Update _server_test.js to not user private realTimeServer._socketIoAbstraction
