--- a/todo.txt
+++ b/todo.txt
@@ -62,9 +62,8 @@ Engineering Tasks:
 - Test that client and server talk to each other correctly; not just that they can talk to Socket.IO, but specifically that they talk to each other
 
 To Do on current task:
-- OFF-CAMERA:
+- DONE OFF-CAMERA:
 	- Rename 'Event' to 'Message' across the board
-- BEFORE EPISODE:
 	- Add 'no-invalid-this' linter rule (thanks to Martin Grandrath)
 - Look for opportunities to improve Socket.IO abstraction API
 	- Unify event sending parameters as suggested by Martin Grandrath's in E582 comments - http://www.letscodejavascript.com/v3/comments/live/582#comment-3675682857
