--- a/todo.txt
+++ b/todo.txt
@@ -53,10 +53,6 @@ User Stories to finish current MMF:
 - polish: make 'clear' button depress when clear event received?
 
 Engineering Tasks:
-* Smoke test failure - introduced in E579? Is there a real bug that should have been caught by other tests?
-	- appears to be a race condition; it doesn't occur every time
-- When the user becomes active again, even if they don't move their mouse pointer, cause ghost pointer to reappear (e.g., if they click the mouse without moving it)
+* When the user becomes active again, even if they don't move their mouse pointer, cause ghost pointer to reappear (e.g., if they click the mouse without moving it)
 
 To Do on current task:
-* Convert Selenium tests to use async/await
-- Modify networking test to wait for line to be drawn rather than pointer to appear
