Test that ghost pointer reappears after timeout

--- a/todo.txt
+++ b/todo.txt
@@ -56,3 +56,5 @@ Engineering Tasks:
 * When the user becomes active again, even if they don't move their mouse pointer, cause ghost pointer to reappear (e.g., if they click the mouse without moving it)
 
 To Do on current task:
+* Implement pointer redisplay
+- Factor out code to track server messages
